[project]
name = "qbtapi"
description = "Pulls things from the QBittorrent API"
version = "0.0.4"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.12"
dependencies = [
    "requests<3.0.0,>=2.28.1",
    "pydantic-settings<3.0.0,>=2.0.1",
    "pydantic<3.0.0,>=2.0.2",
    "splunk-hec @ https://github.com/yaleman/Splunk-Class-httpevent/archive/refs/heads/master.tar.gz",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
qbtapi = "qbtapi.__main__:main"


[project.optional-dependencies]
dev = [
    "mypy<2.0,>=1.0",
    "pylint<4.0.0,>=3.0.1",
    "pylint-pydantic<1.0.0,>=0.3.0",
    "pylint-pytest<2.0.0,>=1.1.2",
    "pytest<9.0.0,>=8.0.0",
    "ruff<1.0.0,>=0.3.0",
    "types-requests<3.0.0,>=2.28.11",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pyright>=1.1.400", "types-requests>=2.32.0.20250328"]

[tool.mypy]
plugins = "pydantic.mypy"
strict = true

[tool.pylint.MASTER]
max-line-length = 150
disable = "W0511,raise-missing-from"
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic,pylint_pytest"
