[project]
name = "qbtapi"
description = "Pulls things from the QBittorrent API"
version = "0.0.4"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.12"
dependencies = [
    "requests>=2.28.1",
    "pydantic-settings>=2.0.1",
    "pydantic>=2.0.2",
    "splunk-hec @ https://github.com/yaleman/Splunk-Class-httpevent/archive/refs/heads/master.tar.gz",
    "click>=8.2.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
qbtapi = "qbtapi.__main__:main"


[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "types-requests>=2.32.0.20250328",
]

[tool.mypy]
plugins = "pydantic.mypy"
strict = true

[tool.pylint.MASTER]
max-line-length = 150
disable = "W0511,raise-missing-from"
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic,pylint_pytest"
